--- a/baumap/baumap/Base.lproj/Main.storyboard
+++ b/baumap/baumap/Base.lproj/Main.storyboard
@@ -346,11 +346,11 @@
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <view contentMode="scaleToFill" ambiguous="YES" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="WAS-nN-kAv" userLabel="Header">
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="WAS-nN-kAv" userLabel="Header">
                                 <rect key="frame" x="0.0" y="0.0" width="600" height="255"/>
                                 <subviews>
-                                    <textField opaque="NO" clipsSubviews="YES" tag="2" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="top" text="Enter Your Location Here" placeholder="Enter Your Location Here" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Ye3-p9-Xvw">
-                                        <rect key="frame" x="0.0" y="0.0" width="600" height="255"/>
+                                    <textField opaque="NO" clipsSubviews="YES" tag="2" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="top" text="Enter Your Location Here" placeholder="Enter Your Location Here" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Ye3-p9-Xvw">
+                                        <rect key="frame" x="0.0" y="82" width="600" height="173"/>
                                         <color key="backgroundColor" red="0.0" green="0.37579971610000001" blue="0.78341666669999999" alpha="1" colorSpace="calibratedRGB"/>
                                         <color key="tintColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                         <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
@@ -359,20 +359,12 @@
                                     </textField>
                                 </subviews>
                                 <color key="backgroundColor" red="0.0" green="0.37579971610000001" blue="0.78341666669999999" alpha="1" colorSpace="calibratedRGB"/>
-                            </view>
-                            <view contentMode="scaleToFill" ambiguous="YES" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="DcE-H7-kug" userLabel="Footer">
-                                <rect key="frame" x="0.0" y="254" width="600" height="346"/>
-                                <subviews>
-                                    <mapView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" ambiguous="YES" misplaced="YES" mapType="standard" translatesAutoresizingMaskIntoConstraints="NO" id="1rr-do-fGH">
-                                        <rect key="frame" x="180" y="86" width="240" height="128"/>
-                                    </mapView>
-                                </subviews>
-                                <color key="backgroundColor" red="0.95994791670000001" green="0.95994791670000001" blue="0.95994791670000001" alpha="1" colorSpace="calibratedRGB"/>
                                 <constraints>
-                                    <constraint firstAttribute="trailing" secondItem="1rr-do-fGH" secondAttribute="trailing" id="Hix-Sw-jyL"/>
-                                    <constraint firstItem="1rr-do-fGH" firstAttribute="top" secondItem="DcE-H7-kug" secondAttribute="top" id="QGP-Ub-oDH"/>
-                                    <constraint firstAttribute="bottom" secondItem="1rr-do-fGH" secondAttribute="bottom" id="TEi-0J-xh3"/>
-                                    <constraint firstItem="1rr-do-fGH" firstAttribute="leading" secondItem="DcE-H7-kug" secondAttribute="leading" id="mXv-EV-bW0"/>
+                                    <constraint firstAttribute="height" constant="255" id="Q1k-Xl-NJK"/>
+                                    <constraint firstItem="Ye3-p9-Xvw" firstAttribute="top" secondItem="WAS-nN-kAv" secondAttribute="top" constant="82" id="Sgy-ZP-xoE"/>
+                                    <constraint firstItem="Ye3-p9-Xvw" firstAttribute="leading" secondItem="WAS-nN-kAv" secondAttribute="leading" id="k2D-1t-wLO"/>
+                                    <constraint firstAttribute="bottom" secondItem="Ye3-p9-Xvw" secondAttribute="bottom" id="lyO-QW-JSK"/>
+                                    <constraint firstAttribute="trailing" secondItem="Ye3-p9-Xvw" secondAttribute="trailing" id="qTP-d0-jnM"/>
                                 </constraints>
                             </view>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Csf-Pq-IVz">
@@ -382,42 +374,46 @@
                                     <action selector="actionClose:" destination="RpL-Al-Iwd" eventType="touchUpInside" id="JMm-oc-p0s"/>
                                 </connections>
                             </button>
-                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="CR2-aD-1os" customClass="CustomButton" customModule="baumap" customModuleProvider="target">
-                                <rect key="frame" x="218" y="278" width="163" height="44"/>
-                                <color key="backgroundColor" red="0.0" green="0.47843137250000001" blue="1" alpha="1" colorSpace="calibratedRGB"/>
-                                <state key="normal" title="Submit">
-                                    <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                                </state>
-                                <connections>
-                                    <action selector="actionSubmit:" destination="RpL-Al-Iwd" eventType="touchUpInside" id="jCq-fU-eKn"/>
-                                </connections>
-                            </button>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="DcE-H7-kug" userLabel="Footer">
+                                <rect key="frame" x="0.0" y="254" width="600" height="346"/>
+                                <subviews>
+                                    <mapView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" mapType="standard" translatesAutoresizingMaskIntoConstraints="NO" id="1rr-do-fGH">
+                                        <rect key="frame" x="0.0" y="0.0" width="600" height="346"/>
+                                    </mapView>
+                                    <button opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="CR2-aD-1os" customClass="CustomButton" customModule="baumap" customModuleProvider="target">
+                                        <rect key="frame" x="219" y="231" width="163" height="44"/>
+                                        <color key="backgroundColor" red="0.0" green="0.47843137250000001" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                                        <state key="normal" title="Submit">
+                                            <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                        </state>
+                                        <connections>
+                                            <action selector="actionSubmit:" destination="RpL-Al-Iwd" eventType="touchUpInside" id="jCq-fU-eKn"/>
+                                        </connections>
+                                    </button>
+                                </subviews>
+                                <color key="backgroundColor" red="0.95994791670000001" green="0.95994791670000001" blue="0.95994791670000001" alpha="1" colorSpace="calibratedRGB"/>
+                                <constraints>
+                                    <constraint firstAttribute="trailing" secondItem="1rr-do-fGH" secondAttribute="trailing" id="0oX-Kv-rfG"/>
+                                    <constraint firstAttribute="bottomMargin" secondItem="CR2-aD-1os" secondAttribute="bottom" constant="63" id="7WN-eu-J1W"/>
+                                    <constraint firstAttribute="bottom" secondItem="1rr-do-fGH" secondAttribute="bottom" id="85t-9G-xrV"/>
+                                    <constraint firstItem="1rr-do-fGH" firstAttribute="top" secondItem="DcE-H7-kug" secondAttribute="top" id="DI1-xP-Hlx"/>
+                                    <constraint firstItem="CR2-aD-1os" firstAttribute="centerX" secondItem="DcE-H7-kug" secondAttribute="centerX" id="bSY-fo-Psv"/>
+                                    <constraint firstItem="1rr-do-fGH" firstAttribute="leading" secondItem="DcE-H7-kug" secondAttribute="leading" id="st0-DH-ogY"/>
+                                </constraints>
+                            </view>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
-                            <constraint firstAttribute="trailingMargin" secondItem="Csf-Pq-IVz" secondAttribute="trailing" constant="256" id="82c-et-7GX"/>
-                            <constraint firstAttribute="trailingMargin" secondItem="Csf-Pq-IVz" secondAttribute="trailing" id="8gd-TC-H7j"/>
-                            <constraint firstItem="WAS-nN-kAv" firstAttribute="leading" secondItem="nlg-48-mnx" secondAttribute="leadingMargin" constant="-20" id="BRB-da-AQI"/>
-                            <constraint firstAttribute="trailingMargin" secondItem="WAS-nN-kAv" secondAttribute="trailing" constant="-20" id="Dvu-DY-Mcc"/>
-                            <constraint firstItem="Csf-Pq-IVz" firstAttribute="top" secondItem="BkN-hn-xkS" secondAttribute="bottom" id="IO8-ck-hF6"/>
-                            <constraint firstItem="DcE-H7-kug" firstAttribute="leading" secondItem="nlg-48-mnx" secondAttribute="leadingMargin" constant="-20" id="R3H-cI-CBO"/>
-                            <constraint firstItem="WAS-nN-kAv" firstAttribute="bottom" secondItem="DcE-H7-kug" secondAttribute="bottom" constant="-154" id="alJ-K2-wYJ"/>
-                            <constraint firstItem="aVs-qA-1nb" firstAttribute="top" secondItem="DcE-H7-kug" secondAttribute="bottom" id="gBd-ks-zKw"/>
-                            <constraint firstAttribute="trailingMargin" secondItem="DcE-H7-kug" secondAttribute="trailing" constant="-20" id="h4P-3Q-qeI"/>
-                            <constraint firstItem="WAS-nN-kAv" firstAttribute="top" secondItem="BkN-hn-xkS" secondAttribute="bottom" id="iM3-qk-7ne"/>
-                            <constraint firstItem="DcE-H7-kug" firstAttribute="top" secondItem="WAS-nN-kAv" secondAttribute="bottom" id="kUI-mQ-dhn"/>
-                            <constraint firstItem="WAS-nN-kAv" firstAttribute="leading" secondItem="nlg-48-mnx" secondAttribute="leadingMargin" constant="-20" id="mMn-HV-Go0"/>
-                            <constraint firstAttribute="trailingMargin" secondItem="WAS-nN-kAv" secondAttribute="trailing" constant="-20" id="xKb-tg-hrN"/>
+                            <constraint firstItem="WAS-nN-kAv" firstAttribute="leading" secondItem="nlg-48-mnx" secondAttribute="leadingMargin" constant="-20" id="6WM-yG-tTZ"/>
+                            <constraint firstItem="DcE-H7-kug" firstAttribute="bottom" secondItem="aVs-qA-1nb" secondAttribute="top" id="Dgd-K8-FxR"/>
+                            <constraint firstItem="DcE-H7-kug" firstAttribute="trailing" secondItem="WAS-nN-kAv" secondAttribute="trailing" id="Xqm-F4-ugm"/>
+                            <constraint firstItem="Csf-Pq-IVz" firstAttribute="top" secondItem="BkN-hn-xkS" secondAttribute="bottom" id="eSw-ir-xTi"/>
+                            <constraint firstItem="DcE-H7-kug" firstAttribute="leading" secondItem="WAS-nN-kAv" secondAttribute="leading" id="hpi-aC-lZ3"/>
+                            <constraint firstItem="DcE-H7-kug" firstAttribute="top" secondItem="nlg-48-mnx" secondAttribute="top" constant="254" id="lkX-Ry-x64"/>
+                            <constraint firstItem="WAS-nN-kAv" firstAttribute="top" secondItem="nlg-48-mnx" secondAttribute="topMargin" id="quR-hF-FaF"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="WAS-nN-kAv" secondAttribute="trailing" constant="-20" id="t0u-jr-drL"/>
+                            <constraint firstItem="Csf-Pq-IVz" firstAttribute="trailing" secondItem="nlg-48-mnx" secondAttribute="trailingMargin" id="yIh-4F-HhM"/>
                         </constraints>
-                        <variation key="default">
-                            <mask key="constraints">
-                                <exclude reference="BRB-da-AQI"/>
-                                <exclude reference="Dvu-DY-Mcc"/>
-                                <exclude reference="iM3-qk-7ne"/>
-                                <exclude reference="kUI-mQ-dhn"/>
-                                <exclude reference="82c-et-7GX"/>
-                            </mask>
-                        </variation>
                     </view>
                     <connections>
                         <outlet property="btnSubmit" destination="CR2-aD-1os" id="W0Y-1U-mMO"/>
